--- a/bloco_3/dia_4/style.css
+++ b/bloco_3/dia_4/style.css
@@ -1,17 +1,44 @@
 html, body{
-    background-color: #e9e9f1;
+    background-color: #caf0f8;
     margin: 0;
     padding: 0;
 }
 
 header{
     text-align: center;
-    background-color: #2c2cc4;
+    background-color: #0096c7;
     padding: 20px;
 }
 
 h1{
     margin:0;
 }
+
+nav{
+    background-color: #03045e;
+    padding: 7px 0;
+}
+
+nav ul{
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+nav ul li{
+    margin:0px;
+    display: inline-block;
+}
+
+nav ul li a {
+    background-color:#0077b6;
+    text-decoration :none;
+    padding: 7px 20px;
+    color: white;
+}
+nav ul li a:hover{
+    background-color:rgb(116, 203, 206);
+}
+
 
 
