--- a/bloco_3/dia_4/style.css
+++ b/bloco_3/dia_4/style.css
@@ -10,7 +10,7 @@ header{
     padding: 20px;
 }
 
-h1{
+h1, h2{
     margin:0;
 }
 
@@ -40,5 +40,12 @@ nav ul li a:hover{
     background-color:rgb(116, 203, 206);
 }
 
-
+main{
+    background-color: #ade8f4;
+    width: 70%;
+    margin: auto;
+}
+main h2{
+    padding-top: 20px;
+}
 
