--- a/bloco_3/dia_4/style.css
+++ b/bloco_3/dia_4/style.css
@@ -10,7 +10,7 @@ header{
     padding: 20px;
 }
 
-h1, h2{
+h1, h2, h3{
     margin:0;
 }
 
@@ -44,8 +44,33 @@ main{
     background-color: #ade8f4;
     width: 70%;
     margin: auto;
-}
-main h2{
-    padding-top: 20px;
+    padding: 0 10px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.404)
 }
 
+main h2{
+    padding: 20px 0;
+}
+
+.informacoe_gerais{
+    border: 2px solid black;
+    width: 27%;
+    text-align: center;
+    float: right;
+    margin-left: 10px;
+
+}
+
+.informacoe_gerais img{
+    width: 90%;
+}
+
+.informacoes_olhos img{
+    width:30%;
+    float: left;
+    margin-right: 10px;
+}
+
+.informacoes_olhos h3{
+    padding-bottom: 10px;
+}
