--- a/bloco_3/dia_4/style.css
+++ b/bloco_3/dia_4/style.css
@@ -52,6 +52,9 @@ main h2{
     padding: 20px 0;
 }
 
+section h3 {
+    margin-bottom: 10px;
+}
 .informacoe_gerais{
     border: 2px solid black;
     width: 27%;
@@ -71,6 +74,25 @@ main h2{
     margin-right: 10px;
 }
 
-.informacoes_olhos h3{
+.informacoes_forca{
+    padding-top: 20px;
+    clear: both;
+}
+.informacoes_forca img{
+    width: 30%;
+}
+
+.referencias {
     padding-bottom: 10px;
+}
+
+footer{
+    text-align: center;
+    background-color:#03045e;
+    color: white;
+    padding:30px ;
+}
+
+footer p {
+    margin:0;
 }
