--- a/bloco_3/dia_4/style.css
+++ b/bloco_3/dia_4/style.css
@@ -53,6 +53,7 @@ main h2{
 }
 
 section h3 {
+    margin-top: 30px;
     margin-bottom: 10px;
 }
 .informacoe_gerais{
@@ -80,12 +81,26 @@ section h3 {
 }
 .informacoes_forca img{
     width: 30%;
+    float: right;
+    margin-left:10px ;
+    clear: both;
 }
 
 .referencias {
     padding-bottom: 10px;
+    clear: both;
 }
 
+.vidio{
+    clear: both;
+}
+iframe{
+    display: block;
+    margin: auto;
+    width: 70%;
+    height:400px;
+    box-shadow: 0 0 8px #666;
+}
 footer{
     text-align: center;
     background-color:#03045e;
@@ -96,3 +111,4 @@ footer{
 footer p {
     margin:0;
 }
+
